fixed? jump-barier positioning

--- a/css/game.css
+++ b/css/game.css
@@ -62,3 +62,15 @@
     left: 44%;
   }
 }
+
+@media screen and (min-width: 900px) and (max-width: 1365px) {
+ 
+  .game{
+    margin-top: 4em;
+    width:1024px;
+  }
+ 
+  #go{
+    left: 44%;
+  }
+}
